# inwestomat-transactions

./: LICENSE  pyrightconfig.json  setup.cfg
inwestomat_transactions/: __init__.py  __main__.py
inwestomat_transactions_converter/: __init__.py
tests/: binance_transactions.xlsx  test_inwestomat_transactions.py  test_inwestomat_transactions_converter.py
typings/binance/: __init__.pyi  client.pyi  enums.pyi
