[metadata]
name = inwestomat-transactions
version = 0.1dev
description = Tłumaczy transakcje do formatu 'inwestomatu'
author = Tomasz Olszewski
author_email = tomol111@wp.pl
license = MIT
license_file = LICENSE

[options]
python_requires = >=3.10
packages = find:

[options.packages.find]
include =
	inwestomat_transaction_converter
	inwestomat_transaction_converter.*

[options.extras_require]
dev =
	flake8
	mypy
	pytest

[options.package_data]
* = py.typed

[mypy]
check_untyped_defs = True
no_implicit_optional = True
disallow_untyped_defs = True
ignore_missing_imports = True

[flake8]
max-line-length = 90
