[metadata]
name = inwestomat-transactions
version = 0.2dev
description = Tłumaczy transakcje do formatu 'inwestomatu'
author = Tomasz Olszewski
author_email = tomol111@wp.pl
license = MIT
license_file = LICENSE

[options]
python_requires = >=3.10
packages = find:
install_requires =
	python-binance

[options.packages.find]
include =
	inwestomat_transactions
	inwestomat_transactions.*

[options.extras_require]
dev =
	flake8
	mypy
	pytest

[options.entry_points]
console_scripts =
	inwestomat = inwestomat_transactions:main

[options.package_data]
* = py.typed

[mypy]
check_untyped_defs = True
no_implicit_optional = True
disallow_untyped_defs = True
ignore_missing_imports = True

[flake8]
max-line-length = 90
